# 2steps-slack-alert

./: .gitignore  Cargo.toml
src/: main.rs
